// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeIcon: Component should render correctly 1`] = `
<home.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;

exports[`HomeIcon: Component should render with custom styles 1`] = `
<home.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;
